Fix extraneous scrollbar
In Chrome 39.0.2171.65 (64-bit) and Version 41.0.2272.89 m
sometimes in splitbars there is an artifact, which is a scrollbar
squished beyond recognition, which shouldn't be there.

More often seen if adding CSS

.ui-splitbar { border: thin solid grey; }

This commit removes that scrollbar by overflow.

Conflicts:
	src/ui-layout.css

--- a/src/ui-layout.css
+++ b/src/ui-layout.css
@@ -34,6 +34,7 @@
   justify-content: center;
   align-items: center;
   background: linear-gradient(to bottom, #fff 0%, #eee 100%);
+  overflow-y: hidden;
 }
 .ui-layout-column > .ui-splitbar{
   width: 8px; height: 100%;
@@ -41,6 +42,7 @@
   -webkit-flex-direction: column;
   flex-direction: column;
   background: linear-gradient(to right, #fff 0%, #eee 100%);
+  overflow-x: hidden;
 }
 
 .ui-layout-column > .ui-splitbar > a,
